<resources>
    <string name="app_name">量化交易助手</string>
    <string name="dashboard_title">交易仪表盘</string>
    <string name="accounts_title">账户管理</string>
    <string name="strategy_title">策略配置</string>
    <string name="settings_title">设置</string>
    <string name="login_button">登录</string>
    <string name="logout_button">退出登录</string>
    <string name="connect_button">连接</string>
    <string name="disconnect_button">断开连接</string>
    <string name="start_trading">开始交易</string>
    <string name="stop_trading">停止交易</string>
    <string name="balance_label">余额</string>
    <string name="equity_label">净值</string>
    <string name="profit_label">盈亏</string>
    <string name="margin_label">保证金</string>
    <string name="free_margin_label">可用保证金</string>
    <string name="api_key_hint">API密钥</string>
    <string name="api_secret_hint">API密钥</string>
    <string name="mt4_server_hint">MT4服务器地址</string>
    <string name="mt4_login_hint">MT4登录号</string>
    <string name="mt4_password_hint">MT4密码</string>
</resources>